# influxdb_thermometer

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
components/elrebo-de__InfluxDB-Client-for-ESP-IDF/: .component_hash  .gitignore  CMakeLists.txt  README.md  idf_component.yml
components/elrebo-de__InfluxDB-Client-for-ESP-IDF/src/: HTTPService.cpp  HTTPService.h  InfluxDbClient.h  Options.cpp  Platform.h  Point.h
components/elrebo-de__InfluxDB-Client-for-ESP-IDF/src/noarduino/: NoArduino.cpp  NoArduino.h
components/elrebo-de__InfluxDB-Client-for-ESP-IDF/src/query/: FluxTypes.h  HttpStreamScanner.h
components/elrebo-de__InfluxDB-Client-for-ESP-IDF/src/util/: debug.h  helpers.cpp  helpers.h
components/sachin42__httpclient/: HTTPClient.cpp
main/: CMakeLists.txt  idf_component.yml  main.cpp  secrets_template.h
