idf_component_register( SRCS "src/Point.cpp"
                             "src/Options.cpp"
                             "src/InfluxDBClient.cpp"
                             "src/HTTPService.cpp"
                             "src/BucketsClient.cpp"
                             "src/util/helpers.cpp"
                             "src/query/Params.cpp"
                             "src/query/HttpStreamScanner.cpp"
                             "src/query/FluxTypes.cpp"
                             "src/query/FluxParser.cpp"
                             "src/query/CsvReader.cpp"
                             "src/noarduino/NoArduino.cpp"
                        INCLUDE_DIRS "src"
                                     "src/util"
                                     "src/query"
                                     "src/noarduino"
                        REQUIRES "78__esp-wifi-connect"
                                 "stream"
                                 "sachin42__httpclient"
                                 "esp_driver_gpio"
                                 "esp_timer"
                                 "esp_event"
                                 "nvs_flash"
                      )

